# ModelContextProtocolFHIR

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  claude_client.py  docker-compose.yml  fhir_client.py  main.py  models.py  pyproject.toml  requirements.txt  validators.py  vercel.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: build.md  security.md
.github/workflows/: ci.yml
.mcp/: server.json
api/: index.py
attached_assets/: Pasted--2025-05-05-19-11-19-0000-176-INFO-Starting-gunicorn-23-0-0-2025-05-05-19-11-19-0000-176--1746472292423.txt
instance/: mcp_server.db
openclaw/: SKILL.md
r6/: __init__.py  agent_client.py  audit.py  context_builder.py  fhir_proxy.py  health_compliance.py  models.py  oauth.py  rate_limit.py  redaction.py  routes.py  stepup.py  validator.py
services/agent-orchestrator/: Dockerfile  package-lock.json  package.json
services/agent-orchestrator/src/: index.ts  tools.test.ts  tools.ts
skills/fhir-r6-guardrails/: SKILL.md
skills/fhir-upstream-proxy/: SKILL.md
skills/phi-redaction/: SKILL.md
static/css/: custom.css  r6-dashboard.css
static/js/: main.js  r6-dashboard.js
templates/: 404.html  500.html  base.html  claude_interface.html  documentation.html  fhir_explorer.html  index.html  mcp_documentation.html  r6_dashboard.html  settings.html
tests/: conftest.py  test_context_builder.py  test_fhir_proxy.py  test_public_fhir_servers.py  test_r6_dashboard.py  test_r6_routes.py
