[project]
name = "fhir-mcp-r6-showcase"
version = "0.5.0"
description = "R6-only Agent-First FHIR Server Showcase with MCP"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "marshmallow>=3.26.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
]
